--- a/demo/component/toolbar/toolbar.css
+++ b/demo/component/toolbar/toolbar.css
@@ -86,12 +86,12 @@
   visibility: visible;
 }
 .toolbar .toolbar_tool .toolbar_tool_detail {
-  z-index: 50;
+  z-index: 200;
   transition: opacity 1s;
   opacity: 0;
   visibility: hidden;
   position: absolute;
-  top: 0px;
+  /* top: 0px; */
   left: 60px;
   background: #fff;
   box-shadow: 0px 2px 20px 0px rgba(192, 192, 205, 0.2);
@@ -102,6 +102,7 @@
   font-size: 12px;
   color: #5a5a67;
   user-select: none;
+  transform: translate(0, -50%);
 }
 .toolbar .toolbar_tool .toolbar_tool_detail_visibility {
   transition: opacity 1s;
@@ -193,4 +194,43 @@
   margin-right: 12px;
 }
 
+/* input 输入框 */
+.inputinfo {
+  margin-top: 12px;
+}
+.inputinfo .inputinfo_input {
+  border: 0;
+  background: #f5f6fa;
+  color: #5a5a66;
+  padding: 0 12px;
+  height: 32px;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.inputinfo .inputinfo_confirm {
+  display: flex;
+  justify-content: center;
+}
+.inputinfo .inputinfo_confirm .inputinfo_confirm_button {
+  margin-top: 12px;
+  padding: 6px 36px;
+  background-color: #314bff;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: 12px;
+}
+
+/* 图片填充模式 */
+.image_fill_mode {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 12px;
+}
+.image_fill_mode .image_fill_mode_radio {
+  display: flex;
+  align-items: center;
+}
 /*# sourceMappingURL=toolbar.css.map */
